--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@
     box-sizing: border-box;
 }
 
-/* Overlay for fade effect when the sidebar is visible */
+/* Overlay */
 .overlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.3); /* Semi-transparent overlay */
+    background-color: rgba(0, 0, 0, 0.3);
     z-index: 999;
     opacity: 0;
     visibility: hidden;
@@ -36,19 +36,31 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Light shadow */
 }
 
-/* Logo in the navbar */
 .navbar .logo img {
     width: 75px;
 }
 
-/* Menu Icon (on the right) */
 .navbar .menu-icon {
     font-size: 25px;
     cursor: pointer;
     color: #001191;
 }
 
-/* Side Menu */
+.navbar .home-nav {
+    font-size: 20px;
+    position: absolute;
+    left: 2%;
+}
+
+.navbar .home-nav a {
+    text-decoration: none;
+    color: #001aa9;
+}
+
+.navbar .home-nav a:hover {
+    color: #9F7728;
+}
+
 .side-menu {
     position: fixed;
     top: 0;
@@ -62,12 +74,10 @@
     border-radius: 10px 0 0 10px; /* Rounded corners */
 }
 
-/* Side menu visible (when triggered) */
 .side-menu.open {
     right: 0;
 }
 
-/* Overlay - background to darken the area when side menu opens */
 .overlay {
     position: fixed;
     top: 0;
